src/styles/header.module.scss
@import "/src/styles/global.scss";

.menu-button {
  position: absolute;
  top: 1.2em;
  right: 1.2em;
  width: 2.5em;
  height: 2.5em;
  padding: 0.2em;
  fill: $primary-color;
  svg {
    width: 100%;
    height: 100%;
    &:nth-child(2) {
      stroke: $light-contrast-color;
      stroke-width: 5;
      stroke-linecap: round;
    }
  }
  @include media-md {
    display: none;
  }
}

.open-menu-button {
  display: block;
  &[data-menu="true"] {
    display: none;
  }
}

.close-menu-button {
  display: none;
  &[data-menu="true"] {
    display: block;
  }
}

.header-wrapper {
  position: fixed;
  top: 0;
  width: 100%;
  height: unset;
  padding-top: 1.2em;
  padding-bottom: 1.2em;
  background: unset;
  z-index: 2;
  &[data-menu="true"] {
    height: 100vh;
    background: $primary-color;
  }
  @include media-md {
    padding-top: 2em;
    padding-bottom: 3em;
    font-size: 1.2em;
    transition: 0.4s;
    background: #ffffff93;
    &[data-active="true"] {
      padding-top: 1em;
      padding-bottom: 1em;
      font-size: 1.2em;
      background: #ffffff51;
    }
    &[data-active="true"] .header-container .header-title {
      width: 84px;
      align-items: center;
      svg {
        height: 1.4em;
      }
    }
    &[data-active="true"] .header-container .header-page-title {
      left: -0.4em;
      font-size: 1.3em;
      font-weight: 500;
    }
    &[data-active="true"] .header-container .header-page-artist-name {
      top: 0;
      opacity: 0;
      font-size: 0.2em;
    }
    &[data-mainmenuactive="false"] {
      top: -10em;
    }
    &[data-mainmenuactive="true"] {
      top: 0;
    }
  }
}

.header-container {
  position: relative;
  height: 100%;
  margin: auto;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding-left: 1.2rem;
  padding-right: 1.2rem;
  @include media-md {
    flex-direction: row;
    align-items: flex-end;
    max-width: 850px;
  }
  @include media-lg {
    padding: unset;
  }
}

.header-title {
  width: 170px;
  display: flex;
  align-items: flex-end;
  color: $dark-contrast-color;
  text-decoration: none;
  transition: 0.2s;
  svg {
    flex-shrink: 0;
    fill: $primary-color;
    height: 2.5em;
    padding: 0.2em;
    transition: 0.2s;
    &[data-menu="true"] {
      fill: $light-contrast-color;
    }
  }
}

.header-page-title {
  position: relative;
  left: -0.4em;
  font-size: 2.5em;
  line-height: 0.9em;
  font-weight: 300;
  transition: 0.2s;
  &[data-menu="true"] {
    display: none;
  }
  @include media-md {
    font-size: 2.1em;
  }
  @include media-lg {
    font-size: 2.3em;
    left: -0.6em;
  }
}

.header-page-artist-name {
  position: absolute;
  top: 2.1em;
  font-size: 1.2em;
  font-weight: 100;
  white-space: nowrap;
  opacity: 1;
  pointer-events: none;
  display: none;
  transition: 0.2s;
  @include media-md {
    display: block;
    font-size: 1em;
    top: 2.4em;
  }
  @include media-lg {
    font-size: 1.2em;
    top: 2.1em;
  }
}

.nav-links {
  display: none;
  list-style: none;
  padding-left: 0;
  .nav-link-item {
    padding-right: 0.5em;
    padding-left: 0.5em;
    padding-bottom: 0.2em;
    font-size: 1.5em;
    font-weight: bolder;
    a {
      color: $dark-contrast-color;
      text-decoration: none;
    }
  }
  &:nth-child(2) {
    /*position: absolute;
    left: 50%;
    transform: translate(-50%, 0);*/
  }
  &:nth-child(3) {
    .nav-link-item {
      padding-right: 0.2em;
      padding-left: 0.2em;
      a {
        opacity: 0.5;
        &:hover {
          opacity: 1;
        }
      }
    }
  }
  &[data-menu="true"] {
    display: flex;
    flex-direction: column;
    padding: 2em;
    &:nth-child(3) {
      padding-bottom: 3em;
    }
  }
  @include media-md {
    display: flex;
    flex-direction: row;
    .nav-link-item {
      font-size: 1em;
      font-weight: unset;
      padding-bottom: 0.1em;
      a {
        &:hover {
          color: $primary-color;
        }
      }
    }
  }
}

.screen-width {
  position: fixed;
  bottom: 0;
  left: 0;
  display: flex;
  align-items: center;
  padding: 0.3rem;
  .blah {
    width: 2rem;
    height: 2rem;
    @include media-sm {
      background: blue;
    }
    @include media-md {
      background: green;
    }
    @include media-lg {
      background: yellow;
    }
    @include media-xl {
      background: orange;
    }
    @include media-2xl {
      background: red;
    }
  }
  p {
    font-size: 2rem;
    font-weight: 600;
    line-height: 0.8em;
    padding-left: 0.3rem;
  }
}

